<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/largeX_margin"
            android:gravity="center"
            android:text="@string/register_title"
            android:textSize="@dimen/largeX_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/til_name"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_size"
            app:layout_constraintBottom_toTopOf="@+id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:hint="@string/hint_name"
                android:inputType="text"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintBottom_toTopOf="@+id/til_password"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_name">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:hint="@string/hint_email"
                android:inputType="textWebEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintBottom_toTopOf="@+id/til_age"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/til_name"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints=""
                android:hint="@string/hint_age"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="@dimen/normal_size"
            android:backgroundTint="@color/black"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="@+id/til_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>